# stock-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  send_email.py
scratch/: ReAct.py  llm_client.py  toolRegister.py
scratch/tools/: searchTool.py
src/: agent_service.py  cli.py  main.py
src/core/: llm.py
src/tools/: email.py  example.py  registry.py  stock.py
tests/: test_email_tools.py  test_stock_tools.py
