[project]
name = "stock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.1",
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.2.0",
    "langchainhub>=0.1.21",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pinecone-client>=6.0.0",
    "resend>=2.29.0",
    "tqdm>=4.67.3",
    "twstock>=1.5.0",
    "typing>=3.10.0.0",
    "wget>=3.2",
]
