[project]
name = "mini-agent"
version = "0.1.0"
description = "Tiny OpenAI text chat loop with XML tool calls."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.7",
    "google-search-results>=2.4.2",
    "langchain-openai>=1.0.3",
    "openai>=2.0.0",
    "python-dotenv>=1.2.2",
    "typer>=0.25.1",
    "yfinance>=1.2.2",
]

[tool.uv]
package = false
